# switchboard

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  RELEASE.md  SECURITY.md  UPGRADE_NOTES.md  docker-compose.yml  pyproject.toml  switchboard-ui-design-doc.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml
config/: personal.example.yaml  personal.yaml  sensitivity_weights.json
docs/: README.md  architecture.md  context-memory-compression.md  demo.md  learned_router.md  local-development.md  local-models.md  overrides.md  performance.md  privacy.md  product.md  routing.md  savings.md  usage.md  ux.md
scripts/: agent_harness.py  demo_personal.sh
switchboard/: __init__.py  cli.py
switchboard/app/: main.py
switchboard/app/api/: admin.py  chat.py  health.py  personal.py  ui.py
switchboard/app/backends/: __init__.py  base.py  cli_agents.py  registry.py  (+1 more)
switchboard/config/: __init__.py  models.yaml  personal.example.yaml  personal.yaml  policies.yaml  router_weights.json  tool_dispatcher_weights.json
switchboard/evals/: __init__.py  datasets.py  mock_adapters.py  quality_bench.py  quality_dataset.py  real_providers.py  real_smoke.py  reports.py  runner.py  scorers.py  types.py
switchboard/training/: __init__.py  augment.py  external_datasets.py  feedback_loop.py  router_dataset.py  sensitivity_dataset.py  tool_dispatcher_dataset.py  train_router.py
tests/: conftest.py  test_architecture_fixes.py  test_capability_strength.py  test_chat_api.py  test_classifier.py  test_config_paths.py  test_context_compression.py  test_cost.py  test_dogfood_regressions.py  test_embeddings.py  test_evals.py  test_external_datasets.py  test_feedback_loop.py  test_learned_router.py  test_live_tools.py  test_local_runtime.py  test_model_recommendations.py  test_paper_components.py  test_personal_api.py  test_personal_daily_use.py  test_personal_providers.py  test_policy_engine.py  test_provider_mock.py  test_quality_bench.py  test_router.py  test_session_context.py  test_switchboard_capabilities.py  test_switchboard_core.py  test_tool_dispatcher.py  test_ui_api.py  test_ui_v2.py  test_update_check.py  test_upgrade.py  test_versioning.py
(+69 files in other folders)
