[project]
name = "switchboard-local"
version = "0.2.2"
description = "Privacy-aware, local-first router across CLI coding agents (Codex, Claude Code) and local LLMs (Ollama)."
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "Vinay Gupta", email = "ai.vinaygupta@gmail.com" }]
keywords = [
    "llm", "llm-routing", "local-first", "privacy", "ollama",
    "claude-code", "codex", "ai-agents", "orchestration", "on-device",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "fastapi>=0.115.0",
    "httpx>=0.27.0",
    "pydantic>=2.8.0",
    "pydantic-settings>=2.4.0",
    "pyyaml>=6.0.2",
    "sqlmodel>=0.0.22",
    "uvicorn[standard]>=0.30.0",
]

[project.urls]
Homepage = "https://github.com/aivinay/switchboard"
Repository = "https://github.com/aivinay/switchboard"
Issues = "https://github.com/aivinay/switchboard/issues"

[project.scripts]
switchboard = "switchboard.cli:main"
ai-switchboard = "switchboard.cli:main"

[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["switchboard*"]

[tool.setuptools.package-data]
"switchboard.config" = ["*.yaml", "*.json"]
"switchboard.app" = ["static/*"]

[project.optional-dependencies]
dev = [
    "mypy>=1.11.0",
    "pytest>=8.3.0",
    "ruff>=0.6.0",
]
finance = [
    "yfinance>=0.2.50",
]
router = [
    "numpy>=1.26",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.11"
plugins = ["pydantic.mypy"]
warn_unused_ignores = true
warn_redundant_casts = true
check_untyped_defs = true
disallow_untyped_defs = false
ignore_missing_imports = true
